Corrected scrollbar

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -31,7 +31,7 @@
     width: 5px;
 
     @media screen and (min-width: 768px) {
-      width: 20px;
+      width: 10px;
     }
   }
 
@@ -41,7 +41,7 @@
     border-radius: 2.5px;
 
     @media screen and (min-width: 768px) {
-      border-radius: 10px;
+      border-radius: 5px;
     }
   }
 
